[gd_scene load_steps=9 format=3 uid="uid://tmsplu2xpr1v"]

[ext_resource type="Script" uid="uid://c4j3t7yk5nxch" path="res://Scripts/main_menu.gd" id="1_5si0x"]
[ext_resource type="Texture2D" uid="uid://drtefox4vs1r4" path="res://AF485614-D58D-4640-9B1F-C86E37F09350_1_105_c.png" id="1_tfcsb"]
[ext_resource type="FontFile" uid="uid://dc5k5ccgoewef" path="res://alterebro-pixel-font.ttf" id="2_2k83t"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_txor0"]
texture = ExtResource("1_tfcsb")
modulate_color = Color(0.93845, 0.93845, 0.93845, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pcywb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0nirs"]
bg_color = Color(1, 0, 0, 0.701961)
corner_radius_top_left = 3
corner_radius_top_right = 16
corner_radius_bottom_right = 3
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_giall"]
bg_color = Color(0.84956, 6.11261e-06, 3.85046e-07, 0.701961)
corner_radius_top_left = 3
corner_radius_top_right = 16
corner_radius_bottom_right = 3
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e7qpc"]
bg_color = Color(1, 0, 0, 0.701961)
corner_radius_top_left = 3
corner_radius_top_right = 16
corner_radius_bottom_right = 3
corner_radius_bottom_left = 16

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5si0x")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_txor0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -86.0
offset_right = 132.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 46

[node name="Jouer" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 0.905882, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.85, 0.765, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_pcywb")
theme_override_styles/hover = SubResource("StyleBoxFlat_0nirs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_giall")
theme_override_styles/normal = SubResource("StyleBoxFlat_e7qpc")
text = "Jouer"

[node name="quitter" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 0.905882, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.85, 0.765, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_pcywb")
theme_override_styles/hover = SubResource("StyleBoxFlat_0nirs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_giall")
theme_override_styles/normal = SubResource("StyleBoxFlat_e7qpc")
text = "Quitter"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -372.5
offset_top = 35.0
offset_right = 371.5
offset_bottom = 184.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.733888, 0, 0.164329, 1)
theme_override_colors/font_shadow_color = Color(0.904501, 0.253342, 0.433155, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("2_2k83t")
theme_override_font_sizes/font_size = 170
text = "WUKONG'S LEGEND"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="pressed" from="VBoxContainer/Jouer" to="." method="_on_jouer_pressed"]
[connection signal="pressed" from="VBoxContainer/quitter" to="." method="_on_quitter_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
